--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -3,24 +3,31 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Label Content="Total Charge After Wrapping ($5)" />
-        <TextBox Name="wrapChargeTextBox" />
-        <Label Content="Total Charge After GST (x1.1)" />
-        <TextBox Name="gstChargeTextBox" />
-        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" />
-        <TextBox Name="totalChargeTextBox" />
         <Label Content="Product:" HorizontalAlignment="Left" Height="30" Margin="46,37,0,0" VerticalAlignment="Top" Width="61"/>
         <Label Content="Price $:" HorizontalAlignment="Left" Height="30" Margin="46,78,0,0" VerticalAlignment="Top" Width="61"/>
-        <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="48,113,0,0" VerticalAlignment="Top" Width="69" RenderTransformOrigin="0.371,0.498"/>
+        <Label Content="Quantity:" HorizontalAlignment="Left" Height="30" Margin="48,113,0,0" VerticalAlignment="Top" Width="69"/>
         <Label Content="Total Payment $:" HorizontalAlignment="Left" Height="30" Margin="46,160,0,0" VerticalAlignment="Top" Width="96"/>
-        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="75"/>
-        <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="96"/>
-        <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
-        <TextBox x:Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="122,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="77"/>
+
+        <TextBox Name="productTextBox" HorizontalAlignment="Left" Height="24" Margin="122,37,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="96"/>
+        <TextBox Name="priceTextBox" HorizontalAlignment="Left" Height="24" Margin="122,78,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="77"/>
+        <TextBox Name="quantityTextBox" HorizontalAlignment="Left" Height="24" Margin="122,119,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="77"/>
+        <TextBlock Name="totalPaymentTextBlock" HorizontalAlignment="Left" Height="23" Margin="164,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
+
+        <!-- Wrap Charge -->
+        <Label Content="Total After Wrap ($5):" HorizontalAlignment="Left" Margin="46,200,0,0" VerticalAlignment="Top" Width="150"/>
+        <TextBox Name="wrapChargeTextBox" HorizontalAlignment="Left" Height="24" Margin="200,200,0,0" VerticalAlignment="Top" Width="96"/>
+
+        <!-- Delivery Charge -->
+        <Label Content="Total After Delivery ($25):" HorizontalAlignment="Left" Margin="46,230,0,0" VerticalAlignment="Top" Width="150"/>
+        <TextBox Name="totalChargeTextBox" HorizontalAlignment="Left" Height="24" Margin="200,230,0,0" VerticalAlignment="Top" Width="96"/>
+
+        <!-- GST -->
+        <Label Content="Total After GST (x1.1):" HorizontalAlignment="Left" Margin="46,260,0,0" VerticalAlignment="Top" Width="150"/>
+        <TextBox Name="gstChargeTextBox" HorizontalAlignment="Left" Height="24" Margin="200,260,0,0" VerticalAlignment="Top" Width="96"/>
+
+        <!-- Buttons -->
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-
-
     </Grid>
 </Window>
